--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,21 @@
 set -g default-terminal "xterm-256color"
 
+# Use ctrl-a since it's just the left hand
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+
 # Mouse controls
 set -g mouse on
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -lind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# vim-like switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
+bind-key -r D run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/data-processing"
+bind-key -r L run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/dev/blueprintr"
