use stow instead of yadm lmao

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,8 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# Get rid of the ugly lime green
+set -g status-style bg=default
 
 # Mouse controls
 set -g mouse on
