--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,4 +20,5 @@ bind -r l select-pane -R
 
 bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
 bind-key -r D run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/data-processing"
+bind-key -r I run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/itembank"
 bind-key -r L run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/dev/blueprintr"
