--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,8 @@ set -g status-style bg=default
 # Mouse controls
 set -g mouse on
 
+bind-key r run-shell "tmux source-file ~/.tmux.conf && tmux display-message 'reloaded tmux config'"
+
 # vim-like switching
 bind -r ^ last-window
 bind -r k select-pane -U
@@ -22,3 +24,4 @@ bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
 bind-key -r D run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/data-processing"
 bind-key -r I run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/itembank"
 bind-key -r L run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/dev/blueprintr"
+bind-key -r H run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/dt-handbook"
