--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,5 +24,6 @@ bind -r l select-pane -R
 bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
 bind-key -r D run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/data-processing"
 bind-key -r I run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/itembank"
+bind-key -r B run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/beaconrs"
 bind-key -r L run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/dev/blueprintr"
 bind-key -r H run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/dt-handbook"
