refactor: drop no-neck-pain and bring back zen-mode
I just got tired of no-neck-pain doing weird things to my line numbering
and cursorline. Also refactored some writing things so that zk commands
can run anywhere.

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -14,6 +14,7 @@ disable_ligatures_in all never
 
 #: Window stuff {{{
 window_padding_width 10
+background_opacity 0.93
 #: }}}
 
 #: MacOS Stuff {{{
