--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,15 +1,14 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Font stuff {{{
-font_family Hack Nerd Font
-bold_font Hack Nerd Font Bold
-italic_font Hack Nerd Font Italic
-bold_italic_font Hack Nerd Font Bold Italic
-font_size 12.0
+font_family Hasklug Nerd Font
+bold_font Hasklug Nerd Font Bold
+italic_font Hasklug Nerd Font Italic
+bold_italic_font Hasklug Nerd Font Bold Italic
+font_size 13.0
 
 #:  Show underlying characters in ligatures when working with them
-disable_ligatures_in active always
-disable_ligatures_in all never
+disable_ligatures cursor
 #: }}}
 
 #: Window stuff {{{
