--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -60,20 +60,20 @@ setw -g window-status-current-format "#[fg=$color_gray,italics]#I: #[fg=$color_b
 run '~/.tmux/plugins/tpm/tpm'
 
 # ====== KEYBINDS ======
-bind-key r run-shell "tmux source-file ~/.tmux.conf && tmux display-message 'reloaded tmux config'"
+bind-key C-r run-shell "tmux source-file ~/.tmux.conf && tmux display-message 'reloaded tmux config'"
 
 # vim-like switching
-bind-key -r ^ last-window
-bind-key -r k select-pane -U
-bind-key -r j select-pane -D
-bind-key -r h select-pane -L
-bind-key -r l select-pane -R
+bind-key ^ last-window
+bind-key k select-pane -U
+bind-key j select-pane -D
+bind-key h select-pane -L
+bind-key l select-pane -R
 
 bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
-bind-key -r D run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/data-processing"
-bind-key -r I run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/itembank"
-bind-key -r B run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/beaconrs"
-bind-key -r L run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/dev/blueprintr"
-bind-key -r H run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/dt-handbook"
-bind-key -r P run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/personal/pkm/"
+bind-key D run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/data-processing"
+bind-key I run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/itembank"
+bind-key B run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/beaconrs"
+bind-key L run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/dev/blueprintr"
+bind-key H run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/dt-handbook"
+bind-key P run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/personal/pkm/"
 
