--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,7 +21,7 @@ color_selection="#3e4452"
 set -g @plugin tpm
 set -g @plugin tmux-pomodoro-plus
 
-set -g @pomodoro_on " | #[fg=$color_gray] "
+set -g @pomodoro_on " | #[fg=$color_red] "
 set -g @pomodoro_complete " | #[fg=$color_green] "
 set -g @pomodoro_cancel 'S'
 
