--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -14,6 +14,10 @@ disable_ligatures cursor
 #: Window stuff {{{
 window_padding_width 10
 background_opacity 0.97
+
+allow_remote_control yes
+listen_on unix:$TMPDIR/kitty
+enabled_layouts splits
 #: }}}
 
 #: MacOS Stuff {{{
