--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -1,13 +1,31 @@
+#!/usr/bin/env bash
+
 yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 sudo yabai --load-sa
+
+yabai -m config window_opacity off
+yabai -m config window_border off
+#
+# Configuration when SIP is off -- personal computer
+if [[ "$(csrutil status)" =~ disabled ]]; then
+    echo "Running yabai in SIP-off mode"
+
+    yabai -m config external_bar all:48:0
+
+
+    yabai -m config window_border on
+    yabai -m config active_window_border_color 0xffeb6f92
+    yabai -m config normal_window_border_color 0x00aaaaaa
+    yabai -m config window_border_width 2
+
+    yabai -m config window_opacity on
+    yabai -m config normal_window_opacity 0.90
+fi
 
 # global settings
 yabai -m config window_origin_display default
 yabai -m config window_placement second_child
 
-yabai -m config window_opacity off
-
-yabai -m config window_border off
 
 yabai -m config layout bsp
 yabai -m config split_ratio 0.50
