--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -40,7 +40,7 @@ yabai -m config window_gap 06
 
 # Applications to ignore
 yabai -m rule --add app="^System Preferences$" manage=off
-yabai -m rule --add app="^Zoom$" manage=off
+yabai -m rule --add app="^zoom.us$" manage=off
 yabai -m rule --add app="^Wally$" manage=off
 yabai -m rule --add app="^Alfred Preferences$" manage=off
 
