feat: alert when current task is overdue

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -17,7 +17,7 @@ background_opacity 0.97
 
 allow_remote_control yes
 listen_on unix:$TMPDIR/kitty
-enabled_layouts splits
+enabled_layouts all
 #: }}}
 
 #: MacOS Stuff {{{
