feat: a whole bunch of stuff

--- a/wofi/.config/wofi/config
+++ b/wofi/.config/wofi/config
@@ -6,16 +6,16 @@ prompt=Apps
 normal_window=true
 layer=top
 term=kitty
-columns=2
+columns=1
 
 ## Geometry
 width=700px
-height=500px
+height=300px
 location=0
 orientation=vertical
 halign=fill
 line_wrap=off
-dynamic_lines=false
+dynamic_lines=true
 
 ## Images
 allow_markup=true
@@ -23,16 +23,16 @@ allow_images=true
 image_size=24
 
 ## Search
-exec_search=false
+exec_search=true
 hide_search=false
-parse_search=false
-insensitive=false
+parse_search=true
+insensitive=true
 
 ## Other
 hide_scroll=true
 no_actions=true
 sort_order=default
-gtk_dark=true
+gtk_dark=false
 filter_rate=100
 
 ## Keys
