--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ $screenshot = $scriptsDir/screenshot
 $lock = $scriptsDir/lockscreen
 $colorpicker = $scriptsDir/colorpicker
 $wofi_beats = $scriptsDir/wofi-beats
-$files = thunar
+$files = nautilus
 $browser = firefox
 $editor = nvim
 
@@ -42,7 +42,7 @@ monitor = , preferred, auto, 1
 
 # Output
 # Configure your Display resolution, offset, scale and Monitors here, use `hyprctl monitors` to get the info.
- 
+
 #monitor=HDMI-A-1,1920x1080@60,0x0,1
 #workspace=HDMI-A-1,1
 #monitor=HDMI-A-2,1920x1080@60,1920x0,1
@@ -88,35 +88,37 @@ $thm_highlight_med1=dfdad9
 $thm_highlight_high1=cecacd
 
 input {
-  # qwerty
-  kb_layout = us
-  # azerty
-  #kb_layout = be
+# qwerty
+    kb_layout = us
+# azerty
+#kb_layout = be
 
-  kb_variant =
-  kb_model =
-  kb_options =
-  kb_rules =
+    kb_variant =
+    kb_model =
+    # This doesn't work -- SUPER and HYPER are bound to mod4
+    # kb_options = caps:hyper
+    kb_options = ctrl:nocaps
+    kb_rules = 
 
-  follow_mouse = 1
-  numlock_by_default = 1
+    follow_mouse = 1
+    numlock_by_default = 1
 
-  touchpad {
-    natural_scroll = true
-    tap-to-click = true
-    drag_lock = true
-    disable_while_typing = true
-    clickfinger_behavior = true
-  }
+    touchpad {
+        natural_scroll = true
+        tap-to-click = true
+        drag_lock = true
+        disable_while_typing = true
+        clickfinger_behavior = true
+    }
 
-  sensitivity = 0.25 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.25 # -1.0 - 1.0, 0 means no modification.
 }
 
 misc {
-  disable_hyprland_logo = true
-  disable_splash_rendering = true
-  mouse_move_enables_dpms = true
-  no_direct_scanout = true #for fullscreen games
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+    mouse_move_enables_dpms = true
+    no_direct_scanout = true #for fullscreen games
 }
 
 binds {
@@ -124,87 +126,88 @@ binds {
 }
 
 general {
-  # See https://wiki.hyprland.org/Configuring/Variables/ for more
-  gaps_in = 3
-  gaps_out = 7
-  border_size = 2
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+    gaps_in = 3
+    gaps_out = 7
+    border_size = 2
 
-  #one color
-  col.active_border = rgba($thm_loveaa)
-  
-  # two colors - gradient
-  # col.active_border = rgba(7aa2f7aa) rgba(c4a7e7aa) 45deg
-  
-  col.inactive_border = rgba($thm_surfaceaa)
+#one color
+    col.active_border = rgba($thm_loveaa)
 
-  layout = master
+# two colors - gradient
+# col.active_border = rgba(7aa2f7aa) rgba(c4a7e7aa) 45deg
+
+    col.inactive_border = rgba($thm_surfaceaa)
+
+    layout = dwindle
 }
 
 decoration {
-  # See https://wiki.hyprland.org/Configuring/Variables/ for more
-  rounding = 6
-  multisample_edges = true
-  blur = yes
-  blur_size = 10
-  blur_passes = 2
-  blur_new_optimizations = on
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+    rounding = 11
+    multisample_edges = true
+    blur = yes
+    blur_size = 10
+    blur_passes = 2
+    blur_new_optimizations = on
 
-  active_opacity = 1.0
-  inactive_opacity = 0.9
-  fullscreen_opacity = 1.0
+    active_opacity = 1.0
+    inactive_opacity = 0.9
+    fullscreen_opacity = 1.0
 
-  drop_shadow = true
-  shadow_range = 4
-  shadow_render_power = 3
-  col.shadow = rgba($thm_baseee)
+    drop_shadow = true
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba($thm_baseee)
 
-  # dim_inactive = true
-  # dim_strength = 0.8
+# dim_inactive = true
+# dim_strength = 0.8
 }
 
 blurls = waybar
 
 animations {
-  enabled = yes
-  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    enabled = yes
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-  # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-  animation = windows, 1, 7, myBezier
-  animation = windowsOut, 1, 7, default, popin 80%
-  animation = border, 1, 10, default
-  animation = fade, 1, 7, default
-  animation = workspaces, 1, 6, default
+# Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 80%
+    animation = border, 1, 10, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default
 }
 
 dwindle {
-  # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-  # pseudotile = yes
-  preserve_split = yes
-  special_scale_factor = 0.6
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+# pseudotile = yes
+    preserve_split = yes
+    special_scale_factor = 0.6
 }
 
 master {
-  # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-  new_is_master = true
-  special_scale_factor = 0.6
+# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+    new_is_master = true
+    special_scale_factor = 0.6
 }
 
 gestures {
-  # See https://wiki.hyprland.org/Configuring/Variables/ for more
-  workspace_swipe = true
-  workspace_swipe_fingers = 3
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device:epic mouse V1 {
-  sensitivity = -0.5
+   sensitivity = -0.5
 }
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # Example windowrule v1
 #windowrule = float, yad|nm-connection-editor|pavucontrol
 #windowrule = float, feh|Gimp|qt5ct
+windowrule = float, rofi|wofi|yad
 
 # Example windowrule v2
 windowrulev2 = tile, class:^(Spotify)$
@@ -229,19 +232,17 @@ windowrulev2 = size 33% 27%, class:^(clock)$, title:^(clock)$
 windowrulev2 = center, class:^(clock)$, title:^(clock)$
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod SHIFT, R, exec, hyprctl reload
-bind = $mainMod SHIFT, D, exec, $fullmenu
 bind = $mainMod, space, exec, $menu
+bind = $mainMod SHIFT, R, exec, hyprctl reload
+bind = $mainMod SHIFT, space, exec, $fullmenu
 bind = $mainMod SHIFT, Q, killactive, 
 bind = $mainMod SHIFT, Return, exec, $files
-bind = $mainMod SHIFT, Space, togglefloating, 
 bind = $mainMod, C, exec, conky-toggle
-bind = $mainMod, E, exec, code
 bind = $mainMod, F, fullscreen
 bind = $mainMod, Q, killactive,
 bind = $mainMod, R, exec, rofi-theme-selector
 bind = $mainMod, Return, exec, $term
-bind = $mainMod, T, exec, $term
+bind = $mainMod, T, togglefloating,
 bind = $mainMod, V, exec, pavucontrol
 
 bind = CTRL ALT, A, exec, xfce4-appfinder
@@ -284,7 +285,7 @@ bind = ALT, right, exec, variety -n
 bind = ALT, p, exec, variety -p
 bind = ALT, left, exec, variety -p
 # favorite wallpaper
-bind = ALT, f, exec, variety -f
+bind = ALT, f, exec, variety -f && notify-send "Favorited background"
 # pause wallpaper
 bind = ALT, up, exec, variety --pause
 # resume wallpaper
@@ -308,7 +309,6 @@ bind = $mainMod, K, layoutmsg, cycleprev
 bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
-bind = $mainMod, Space, exec, $scriptsDir/changeLayout
 bind = $mainMod, X, exec, archlinux-logout
 bind = $mainMod, Y, exec, $term --class update -T update -e cava
 
@@ -336,6 +336,8 @@ bind = , xf86audioprev, exec, playerctl previous
 bind = , xf86audiostop, exec, playerctl stop
 bind = , xf86monbrightnessup, exec, $backlight --inc
 bind = , xf86monbrightnessdown, exec, $backlight --dec
+bind = SHIFT, xf86monbrightnessup, exec, $backlight --inc 1
+bind = SHIFT, xf86monbrightnessdown, exec, $backlight --dec 1
 
 # Backlight control
 bind = $mainMod SHIFT, equal, submap, backlight
@@ -344,6 +346,10 @@ bind = , equal, exec, $backlight --inc
 bind = , minus, exec, $backlight --dec
 bind = , escape, submap, reset
 submap = reset
+
+# Flux emulation
+bind = SUPER, xf86monbrightnessdown, exec, hyprctl keyword decoration:screen_shader "$scriptsDir/flux.glsl"
+bind = SUPER, xf86monbrightnessup, exec, hyprctl keyword decoration:screen_shader "$scriptsDir/base.glsl"
 
 # Volume control
 bind = $mainMod, equal, submap, volume
@@ -384,24 +390,6 @@ bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Azerty
-# Switch workspaces with mainMod + [0-9]
-#bind = $mainMod, Ampersand, workspace, 1
-#bind = $mainMod, Eacute, workspace, 2
-#bind = $mainMod, Quotedbl, workspace, 3
-#bind = $mainMod, Apostrophe, workspace, 4
-#bind = $mainMod, Parenleft, workspace, 5
-#bind = $mainMod, Section, workspace, 6
-#bind = $mainMod, Egrave, workspace, 7
-#bind = $mainMod, Exclam, workspace, 8
-#bind = $mainMod, ccedilla, workspace, 9
-#bind = $mainMod, agrave, workspace, 10
 
 # Qwerty
 # Move active window and follow to workspace
@@ -410,28 +398,8 @@ bind = $mainMod CTRL, 2, movetoworkspace, 2
 bind = $mainMod CTRL, 3, movetoworkspace, 3
 bind = $mainMod CTRL, 4, movetoworkspace, 4
 bind = $mainMod CTRL, 5, movetoworkspace, 5
-bind = $mainMod CTRL, 6, movetoworkspace, 6
-bind = $mainMod CTRL, 7, movetoworkspace, 7
-bind = $mainMod CTRL, 8, movetoworkspace, 8
-bind = $mainMod CTRL, 9, movetoworkspace, 9
-bind = $mainMod CTRL, 0, movetoworkspace, 10
 bind = $mainMod CTRL, bracketleft, movetoworkspace, -1
 bind = $mainMod CTRL, bracketright, movetoworkspace, +1
-
-# Azerty
-# Move active window and follow to workspace
-#bind = $mainMod CTRL, Ampersand, movetoworkspace, 1
-#bind = $mainMod CTRL, Eacute, movetoworkspace, 2
-#bind = $mainMod CTRL, Quotedbl, movetoworkspace, 3
-#bind = $mainMod CTRL, Apostrophe, movetoworkspace, 4
-#bind = $mainMod CTRL, Parenleft, movetoworkspace, 5
-#bind = $mainMod CTRL, Section, movetoworkspace, 6
-#bind = $mainMod CTRL, Egrave, movetoworkspace, 7
-#bind = $mainMod CTRL, Exclam, movetoworkspace, 8
-#bind = $mainMod CTRL, ccedilla, movetoworkspace, 9
-#bind = $mainMod CTRL, agrave, movetoworkspace, 10
-#bind = $mainMod CTRL, bracketleft, movetoworkspace, -1
-#bind = $mainMod CTRL, bracketright, movetoworkspace, +1
 
 # Qwerty
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
@@ -440,28 +408,8 @@ bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
 bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
 bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
 bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, -1
 bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, +1
-
-# Azerty
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-#bind = $mainMod SHIFT, Ampersand, movetoworkspacesilent, 1
-#bind = $mainMod SHIFT, Eacute, movetoworkspacesilent, 2
-#bind = $mainMod SHIFT, Quotedbl, movetoworkspacesilent, 3
-#bind = $mainMod SHIFT, Apostrophe, movetoworkspacesilent, 4
-#bind = $mainMod SHIFT, Parenleft, movetoworkspacesilent, 5
-#bind = $mainMod SHIFT, Section, movetoworkspacesilent, 6
-#bind = $mainMod SHIFT, Egrave, movetoworkspacesilent, 7
-#bind = $mainMod SHIFT, Exclam, movetoworkspacesilent, 8
-#bind = $mainMod SHIFT, ccedilla, movetoworkspacesilent, 9
-#bind = $mainMod SHIFT, agrave, movetoworkspacesilent, 10
-#bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, -1
-#bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, +1
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -471,7 +419,7 @@ bind = $mainMod, comma, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = $mainMod + SHIFT, mouse:272, resizewindow
 
 bind = $mainMod, G, togglegroup
 bind = $mainMod, tab, workspace, m+1
@@ -484,8 +432,9 @@ bind = $mainMod SHIFT, O, exec, $term --class hyprpicker --hold -e hyprpicker
 bind = $mainMod CTRL, S, exec, $wofi_beats
 
 # Screenshot keybindings
-bind = , Print, exec, $screenshot --now
-bind = $mainMod, Print, exec, $screenshot --in5
-bind = SHIFT, Print, exec, $screenshot --in10
-bind = CTRL, Print, exec, $screenshot --win
-bind = $mainMod CTRL, Print, exec, $screenshot --area
+bind = SUPER+ALT, 3, exec, $screenshot --now
+bind = SUPER+ALT, 4, exec, $screenshot --win
+bind = SUPER+ALT, 5, exec, $screenshot --area
+
+# Emoji picker
+bind = $mainMod, E, exec, bemoji -t
