feat: add gammastep and tidy hyprland conf
Also, put power menu behind the apple for safety

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -111,7 +111,7 @@ input {
         clickfinger_behavior = true
     }
 
-    sensitivity = 0.25 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.18 # -1.0 - 1.0, 0 means no modification.
 }
 
 misc {
@@ -164,8 +164,6 @@ decoration {
 # dim_strength = 0.8
 }
 
-blurls = waybar
-
 animations {
     enabled = yes
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
@@ -206,19 +204,11 @@ device:epic mouse V1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # Example windowrule v1
 #windowrule = float, yad|nm-connection-editor|pavucontrol
-#windowrule = float, feh|Gimp|qt5ct
+windowrule = float, feh|Gimp|qt5ct
 windowrule = float, rofi|wofi|yad
 
 # Example windowrule v2
 windowrulev2 = tile, class:^(Spotify)$
-
-#windowrulev2 = workspace 4, class:^(Apache Directory Studio)$
-#windowrulev2 = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
-#windowrulev2 = bordercolor rgb(282737) rgb(1E1D2D), floating:1
-#windowrulev2 = opacity 0.8 0.8, pinned:1
-#windowrulev2 = workspace 10, class:^(Microsoft-edge)$
-#windowrulev2 = workspace 8 silent, class^(Steam)$, title:^(Steam)$
-#windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
 
 # for waybar yay update click
 windowrulev2 = animation popin, class:^(update)$, title:^(update)$
@@ -231,210 +221,157 @@ windowrulev2 = float, class:^(clock)$, title:^(clock)$
 windowrulev2 = size 33% 27%, class:^(clock)$, title:^(clock)$
 windowrulev2 = center, class:^(clock)$, title:^(clock)$
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, space, exec, $menu
-bind = $mainMod SHIFT, R, exec, hyprctl reload
-bind = $mainMod SHIFT, space, exec, $fullmenu
-bind = $mainMod SHIFT, Q, killactive, 
-bind = $mainMod SHIFT, Return, exec, $files
-bind = $mainMod, C, exec, conky-toggle
-bind = $mainMod, F, fullscreen
-bind = $mainMod, Q, killactive,
-bind = $mainMod, R, exec, rofi-theme-selector
-bind = $mainMod, Return, exec, $term
-bind = $mainMod, T, togglefloating,
-bind = $mainMod, V, exec, pavucontrol
-
-bind = CTRL ALT, A, exec, xfce4-appfinder
-bind = CTRL ALT, C, exec, catfish
-bind = CTRL ALT, B, exec, thunar
-bind = CTRL ALT, E, exec, archlinux-tweak-tool
-bind = CTRL ALT, F, exec, firefox
-bind = CTRL ALT, G, exec, chromium -no-default-browser-check
-bind = CTRL ALT, I, exec, nitrogen
-bind = CTRL ALT, K, exec, $scriptsDir/lockscreen
-bind = CTRL ALT, L, exec, $scriptsDir/lockscreen
-bind = CTRL ALT, NEXT, exec, conky-rotate -n
-bind = CTRL ALT, P, exec, pamac-manager
-bind = CTRL ALT, PREVIOUS, exec, conky-rotate -p
-bind = CTRL ALT, R, exec, rofi-theme-selector
-bind = CTRL ALT, Return, exec, foot
-bind = CTRL ALT, S, exec, spotify
-bind = CTRL ALT, T, exec, $term
-bind = CTRL ALT, U, exec, pavucontrol
-bind = CTRL ALT, V, exec, vivaldi-stable
-bind = CTRL ALT, W, exec, arcolinux-welcome-app
-
-bind = CTRL SHIFT, Escape,exec, $term --class bashtop -T bashtop -e bashtop
-
-# change wallpaper
-#bind = ALT, n, exec, $scriptsDir/changeWallpaper
-#bind = ALT, p, exec, $scriptsDir/changeWallpaper
-#bind = ALT, left, exec, $scriptsDir/changeWallpaper
-#bind = ALT, right, exec, $scriptsDir/changeWallpaper
-#bind = ALT, up, exec, $scriptsDir/changeWallpaperDesktop
-#bind = ALT, down, exec, $scriptsDir/changeWallpaperDesktop
-
-# Variety
-# trash wallpaper
-bind ALT, t, exec, variety -t
-# next wallpaper
-bind = ALT, n, exec, variety -n
-bind = ALT, right, exec, variety -n
-# previous wallpaper
-bind = ALT, p, exec, variety -p
-bind = ALT, left, exec, variety -p
-# favorite wallpaper
-bind = ALT, f, exec, variety -f && notify-send "Favorited background"
-# pause wallpaper
-bind = ALT, up, exec, variety --pause
-# resume wallpaper
-bind = ALT, down, exec, variety --resume
-
-# effect
-bind = ALT, g, exec, $scriptsDir/glassmorphismToggle
-
-bind = ALT, F3, exec, xfce4-appfinder
-
-bind = , F12, exec, xfce4-terminal --drop-down
-
-bind = $mainMod SHIFT, M, exec, hyprctl dispatch splitratio -0.3
-bind = $mainMod SHIFT, Y, exec, $term --class clock -T clock -e tty-clock -c -C 7 -r -s -f "%A, %B, %d"
-
-bind = $mainMod, D, layoutmsg, removemaster
-bind = $mainMod, Escape, exec, hyprctl kill
-bind = $mainMod, I, layoutmsg, addmaster
-bind = $mainMod, J, layoutmsg, cyclenext
-bind = $mainMod, K, layoutmsg, cycleprev
-bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
-bind = $mainMod, X, exec, archlinux-logout
-bind = $mainMod, Y, exec, $term --class update -T update -e cava
-
-# Mainmod + Function keys
-bind = $mainMod, F1, exec, $browser
-bind = $mainMod, F2, exec, $editor
-bind = $mainMod, F3, exec, inkscape
-bind = $mainMod, F4, exec, gimp
-bind = $mainMod, F5, exec, meld
-bind = $mainMod, F6, exec, vlc
-bind = $mainMod, F7, exec, virtualbox
-bind = $mainMod, F8, exec, $files
-bind = $mainMod, F9, exec, evolution
-bind = $mainMod, F10, exec, spotify
-bind = $mainMod, F11, exec, rofi -show drun
-bind = $mainMod, F12, exec, rofi -show drun
-
-# Special Keys
-bind = , xf86audioraisevolume, exec, $volume --inc
-bind = , xf86audiolowervolume, exec, $volume --dec
-bind = , xf86audiomute, exec, $volume --toggle
-bind = , xf86audioplay, exec, playerctl play-pause
-bind = , xf86audionext, exec, playerctl next
-bind = , xf86audioprev, exec, playerctl previous
-bind = , xf86audiostop, exec, playerctl stop
-bind = , xf86monbrightnessup, exec, $backlight --inc
-bind = , xf86monbrightnessdown, exec, $backlight --dec
-bind = SHIFT, xf86monbrightnessup, exec, $backlight --inc 1
-bind = SHIFT, xf86monbrightnessdown, exec, $backlight --dec 1
-
-# Backlight control
-bind = $mainMod SHIFT, equal, submap, backlight
-submap = backlight
-bind = , equal, exec, $backlight --inc
-bind = , minus, exec, $backlight --dec
-bind = , escape, submap, reset
-submap = reset
-
-# Flux emulation
-bind = SUPER, xf86monbrightnessdown, exec, hyprctl keyword decoration:screen_shader "$scriptsDir/flux.glsl"
-bind = SUPER, xf86monbrightnessup, exec, hyprctl keyword decoration:screen_shader "$scriptsDir/base.glsl"
-
-# Volume control
-bind = $mainMod, equal, submap, volume
-submap = volume
-bind = , equal, exec, $volume --inc
-bind = , minus, exec, $volume --dec
-bind = , 0, exec, $volume --toggle
-bind = , 9, exec, $volume --toggle-mic
-bind = , escape, submap, reset
-submap = reset
-
-# Resize
-binde = $mainMod SHIFT, H, resizeactive,-50 0
-binde = $mainMod SHIFT, L, resizeactive,50 0
-binde = $mainMod SHIFT, K, resizeactive,0 -50
-binde = $mainMod SHIFT, J, resizeactive,0 50
-
-# Move
-bind = $mainMod CTRL, H, movewindow, l
-bind = $mainMod CTRL, L, movewindow, r
-bind = $mainMod CTRL, K, movewindow, u
-bind = $mainMod CTRL, J, movewindow, d
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-# Special workspace
-bind = $mainMod SHIFT, U, movetoworkspace, special
-bind = $mainMod, U, togglespecialworkspace,
-
-# Qwerty
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-
-# Qwerty
-# Move active window and follow to workspace
-bind = $mainMod CTRL, 1, movetoworkspace, 1
-bind = $mainMod CTRL, 2, movetoworkspace, 2
-bind = $mainMod CTRL, 3, movetoworkspace, 3
-bind = $mainMod CTRL, 4, movetoworkspace, 4
-bind = $mainMod CTRL, 5, movetoworkspace, 5
-bind = $mainMod CTRL, bracketleft, movetoworkspace, -1
-bind = $mainMod CTRL, bracketright, movetoworkspace, +1
-
-# Qwerty
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, -1
-bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, +1
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-bind = $mainMod, period, workspace, e+1
-bind = $mainMod, comma, workspace, e-1
+###### MOUSE BINDS ######
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod + SHIFT, mouse:272, resizewindow
+bindm = SUPER, mouse:272, movewindow
+bindm = SUPER + SHIFT, mouse:272, resizewindow
 
-bind = $mainMod, G, togglegroup
-bind = $mainMod, tab, workspace, m+1
-bind = $mainMod SHIFT, tab, workspace, m-1
-bind = ALT, tab, workspace, m+1
-bind = ALT SHIFT, tab, workspace, m-1
+###### KEYBINDS ######
 
-bind = $mainMod, O, exec, $colorpicker
-bind = $mainMod SHIFT, O, exec, $term --class hyprpicker --hold -e hyprpicker
-bind = $mainMod CTRL, S, exec, $wofi_beats
+### Workspace management ###
 
-# Screenshot keybindings
-bind = SUPER+ALT, 3, exec, $screenshot --now
-bind = SUPER+ALT, 4, exec, $screenshot --win
-bind = SUPER+ALT, 5, exec, $screenshot --area
+# Switch to workspace
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+
+### Window management ###
+
+# Move to desired workspace
+bind = SUPER + SHIFT, 1, movetoworkspacesilent, 1
+bind = SUPER + SHIFT, 2, movetoworkspacesilent, 2
+bind = SUPER + SHIFT, 3, movetoworkspacesilent, 3
+bind = SUPER + SHIFT, 4, movetoworkspacesilent, 4
+bind = SUPER + SHIFT, 5, movetoworkspacesilent, 5
+
+# Toggle floating
+bind = SUPER, T, togglefloating, active
+
+# Toggle fullscreen
+bind = SUPER, F, exec, hyprctl dispatch fullscreen 0 && hyprctl setcursor macOS-Monterey 24
+
+# Resizing windows
+
+bind = SUPER + SHIFT, R, exec, hyprctl dispatch submap resize && notify-send -u low "Window resize mode"
+
+submap = resize
+
+bind = , escape, exec, hyprctl dispatch submap reset && notify-send -u low "Normal mode"
+
+bind = , h, resizeactive, -10 0
+bind = SHIFT, h, resizeactive, -1 0
+
+bind = , j, resizeactive, 0 -10
+bind = SHIFT, j, resizeactive, 0 -1
+
+bind = , k, resizeactive, 0 10
+bind = SHIFT, k, resizeactive, 0 1
+
+bind = , l, resizeactive, 10 0
+bind = SHIFT, l, resizeactive, 10 0
+
+bind = , equal, splitratio, 0.5
+
+submap = reset
+
+### Application management ###
+
+# Open application launcher
+bind = SUPER, space, exec, $scriptsDir/menu
+
+# Open program launcher
+bind = SUPER + SHIFT, space, exec, $scriptsDir/fullmenu
+
+# Open terminal
+bind = SUPER, return, exec, kitty -1
+
+# Open file browser
+bind = SUPER + SHIFT, return, exec, nautilus
+    
+# Close application window
+bind = SUPER, Q, killactive, window
+
+## Application launching submaps ##
+
+bind = SUPER, O, submap, apps
+
+submap = apps
+
+# Escape from launching context
+bind = , escape, submap, reset
+
+# Launch Firefox
+bind = , F, exec, hyprctl dispatch submap reset && firefox
+
+# Launch Spotify
+bind = , S, exec, hyprctl dispatch submap reset && spotify
+
+# Go to utilities submap
+bind = , U, submap, utils
+
+submap = reset
+
+
+submap = utils
+
+# Escape from launching context
+bind = , escape, submap, reset
+
+# Open Pavu control
+bind = , V, exec, hyprctl dispatch submap reset && pavucontrol
+
+# Open Bluetooth manager
+bind = , B, exec, hyprctl dispatch submap reset &&  blueman-manager
+
+submap = reset
+
+### Special keys ###
+
+# Raise volume
+bind = , XF86AudioRaiseVolume, exec, $scriptsDir/volume --inc
+
+# Lower volume
+bind = , XF86AudioLowerVolume, exec, $scriptsDir/volume --dec
+
+# Toggle volume mute
+bind = , XF86AudioMute, exec, $scriptsDir/volume --toggle
+
+# Play/pause audio player
+bind = , XF86AudioPlay, exec, playerctl play-pause
+
+# Play next/previous track
+bind = , XF86AudioNext, exec, playerctl next
+
+# Play previous track
+bind = , XF86AudioPrev, exec, playerctl previous
+
+# Stop audio player
+bind = , XF86AudioStop, exec, playerctl stop
+
+# Raise screen brightness
+bind = , XF86MonBrightnessUp, exec, $scriptsDir/brightness --inc
+
+bind = SHIFT, XF86MonBrightnessUp, exec, $scriptsDir/brightness --inc 1
+
+# Lower screen brightness
+bind = , XF86MonBrightnessDown, exec, $scriptsDir/brightness --dec
+bind = SHIFT, XF86MonBrightnessDown, exec, $scriptsDir/brightness --dec 1
+
+# Activate day flux mode
+# bind = SUPER, XF86MonBrightnessUp, exec, hyprctl keyword decoration:screen_shader $scriptsDir/base.glsl
+
+# Acivate night flux mode
+# bind = SUPER, XF86MonBrightnessDown, exec, hyprctl keyword decoration:screen_shader $scriptsDir/flux.glsl
+
+### Miscellaneous ###
+
+# Take screenshot
+bind = SUPER + ALT, 3, exec, $scriptsDir/screenshot --now
+bind = SUPER + ALT, 4, exec, $scriptsDir/screenshot --win
+bind = SUPER + ALT, 5, exec, $scriptsDir/screenshot --area
 
 # Emoji picker
-bind = $mainMod, E, exec, bemoji -t
+bind = SUPER, E, exec, bemoji -t
