--- a/hypr/.config/hypr/mako/config
+++ b/hypr/.config/hypr/mako/config
@@ -9,13 +9,13 @@ on-touch=dismiss
 #on-notify=exec mpv /usr/share/sounds/freedesktop/stereo/message.oga
 
 # STYLE OPTIONS
-font=Noto Sans 11
+font=SF Pro Display
 width=300
 height=100
 margin=10
 padding=15
 border-size=2
-border-radius=0
+border-radius=10
 icons=1
 max-icon-size=48
 icon-location=left
