chore: update all the things again

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ $localBin = $HOME/.local/bin
 $scriptsDir = $HOME/.config/hypr/scripts
 $hyprDir = $HOME/.config/hypr
 
-$term = kitty
+$term = kitty -1 --listen-on unix:/tmp/kitty
 $menu = $scriptsDir/menu
 $fullmenu = $scriptsDir/fullmenu
 $powermenu = $scriptsDir/powermenu
@@ -251,7 +251,7 @@ bind = SUPER + SHIFT, 5, movetoworkspacesilent, 5
 bind = SUPER, T, togglefloating, active
 
 # Toggle fullscreen
-bind = SUPER, F, exec, hyprctl dispatch fullscreen 0 && hyprctl setcursor macOS-Monterey 24
+bind = SUPER, F, exec, hyprctl dispatch fullscreen 1 && hyprctl setcursor macOS-Monterey 24
 
 # Resizing windows
 
@@ -286,13 +286,16 @@ bind = SUPER, space, exec, $scriptsDir/menu
 bind = SUPER + SHIFT, space, exec, $scriptsDir/fullmenu
 
 # Open terminal
-bind = SUPER, return, exec, kitty -1
+bind = SUPER, return, exec, $term
 
-# Open file browser
-bind = SUPER + SHIFT, return, exec, nautilus
+# Open file browser - nnn
+bind = SUPER + SHIFT, return, exec, $term /usr/bin/fish -C "n -P p"
     
 # Close application window
 bind = SUPER, Q, killactive, window
+
+# Log out
+bind = SUPER + SHIFT, Q, exec, eww -c ~/.config/eww/bar open dialog-logout
 
 ## Application launching submaps ##
 
@@ -307,7 +310,10 @@ bind = , escape, submap, reset
 bind = , F, exec, hyprctl dispatch submap reset && firefox
 
 # Launch Spotify
-bind = , S, exec, hyprctl dispatch submap reset && spotify
+bind = , S, exec, hyprctl dispatch submap reset && $term ncspot
+
+# Launch Taskwarrior
+bind = , T, exec, hyprctl dispatch submap reset && $term taskwarrior-tui
 
 # Go to utilities submap
 bind = , U, submap, utils
