--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -15,7 +15,7 @@ disable_ligatures cursor
 window_padding_width 10
 background_opacity 0.97
 
-enabled_layouts all
+enabled_layouts splits
 #: }}}
 
 #: MacOS Stuff {{{
@@ -81,4 +81,8 @@ color15  #e0def4
 
 #: Shell {{{
 shell /usr/bin/fish
+#: }}}
+
+#: Remote control {{{
+allow_remote_control yes
 #: }}}
