feat: primarily move from wofi to rofi

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -253,6 +253,16 @@ bind = SUPER, T, togglefloating, active
 # Toggle fullscreen
 bind = SUPER, F, exec, hyprctl dispatch fullscreen 1 && hyprctl setcursor macOS-Monterey 24
 
+# Moving around
+bind = SUPER, h, movefocus, l
+bind = SUPER, j, movefocus, d
+bind = SUPER, k, movefocus, u
+bind = SUPER, l, movefocus, r
+
+# Swapping windows around
+bind = SUPER + SHIFT, j, swapnext
+bind = SUPER + SHIFT, k, swapnext, prev
+
 # Resizing windows
 
 bind = SUPER + SHIFT, R, exec, hyprctl dispatch submap resize && notify-send -u low "Window resize mode"
@@ -280,10 +290,7 @@ submap = reset
 ### Application management ###
 
 # Open application launcher
-bind = SUPER, space, exec, $scriptsDir/menu
-
-# Open program launcher
-bind = SUPER + SHIFT, space, exec, $scriptsDir/fullmenu
+bind = SUPER, space, exec, rofi -show drun
 
 # Open terminal
 bind = SUPER, return, exec, $term
@@ -314,6 +321,9 @@ bind = , S, exec, hyprctl dispatch submap reset && $term ncspot
 
 # Launch Taskwarrior
 bind = , T, exec, hyprctl dispatch submap reset && $term taskwarrior-tui
+
+# Launch mail
+bind = SHIFT, M, exec, hyprctl dispatch submap reset && $term fish -c neomutt
 
 # Go to utilities submap
 bind = , U, submap, utils
@@ -380,4 +390,4 @@ bind = SUPER + ALT, 4, exec, $scriptsDir/screenshot --win
 bind = SUPER + ALT, 5, exec, $scriptsDir/screenshot --area
 
 # Emoji picker
-bind = SUPER, E, exec, bemoji -t
+bind = SUPER, E, exec, rofimoji
