feat: all the things

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -340,7 +340,7 @@ bind = , escape, submap, reset
 bind = , V, exec, hyprctl dispatch submap reset && pavucontrol
 
 # Open Bluetooth manager
-bind = , B, exec, hyprctl dispatch submap reset &&  blueman-manager
+bind = , B, exec, hyprctl dispatch submap reset && blueman-manager
 
 submap = reset
 
@@ -369,7 +369,6 @@ bind = , XF86AudioStop, exec, playerctl stop
 
 # Raise screen brightness
 bind = , XF86MonBrightnessUp, exec, $scriptsDir/brightness --inc
-
 bind = SHIFT, XF86MonBrightnessUp, exec, $scriptsDir/brightness --inc 1
 
 # Lower screen brightness
@@ -383,6 +382,9 @@ bind = SHIFT, XF86MonBrightnessDown, exec, $scriptsDir/brightness --dec 1
 # bind = SUPER, XF86MonBrightnessDown, exec, hyprctl keyword decoration:screen_shader $scriptsDir/flux.glsl
 
 ### Miscellaneous ###
+
+# Lock computer
+bind = SUPER, L, exec, $scriptsDir/lockscreen
 
 # Take screenshot
 bind = SUPER + ALT, 3, exec, $scriptsDir/screenshot --now
