chore: update mac conf

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -2,7 +2,7 @@
 Host *
     UseKeychain yes
     AddKeysToAgent yes
-    IdentityFile ~/.ssh/id_rsa.key
+    IdentityFile ~/.ssh/id_ed25519
 
 
     # first we create the tunnel, with instructions to pass incoming
