--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ exec-once = $scriptsDir/portal
 # with lock
 #exec-once = swayidle -w timeout 1200 '$lock' timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
 # without lock
-exec-once = swayidle -w  timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+exec-once = swayidle -w  timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
 
 # Monitors
 monitor = , preferred, auto, 1
@@ -97,7 +97,7 @@ input {
     kb_model =
     # This doesn't work -- SUPER and HYPER are bound to mod4
     # kb_options = caps:hyper
-    kb_options = ctrl:nocaps
+    kb_options = ctrl:nocaps, compose:ralt
     kb_rules = 
 
     follow_mouse = 1
@@ -169,11 +169,11 @@ animations {
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
 # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+    animation = windows, 1, 6, myBezier
+    animation = windowsOut, 1, 6, default, popin 80%
     animation = border, 1, 10, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = fade, 1, 6, default
+    animation = workspaces, 1, 4, default, slidevert
 }
 
 dwindle {
@@ -252,6 +252,9 @@ bind = SUPER, T, togglefloating, active
 
 # Toggle fullscreen
 bind = SUPER, F, exec, hyprctl dispatch fullscreen 1 && hyprctl setcursor macOS-Monterey 24
+#
+# Toggle complete fullscreen
+bind = SUPER + SHIFT, F, exec, hyprctl dispatch fullscreen 0 && hyprctl setcursor macOS-Monterey 24
 
 # Moving around
 bind = SUPER, h, movefocus, l
@@ -271,16 +274,16 @@ submap = resize
 
 bind = , escape, exec, hyprctl dispatch submap reset && notify-send -u low "Normal mode"
 
-bind = , h, resizeactive, -10 0
-bind = SHIFT, h, resizeactive, -1 0
+bind = , h, resizeactive, -30 0
+bind = SHIFT, h, resizeactive, -10 0
 
-bind = , j, resizeactive, 0 -10
-bind = SHIFT, j, resizeactive, 0 -1
+bind = , j, resizeactive, 0 -30
+bind = SHIFT, j, resizeactive, 0 -10
 
-bind = , k, resizeactive, 0 10
-bind = SHIFT, k, resizeactive, 0 1
+bind = , k, resizeactive, 0 30
+bind = SHIFT, k, resizeactive, 0 10
 
-bind = , l, resizeactive, 10 0
+bind = , l, resizeactive, 30 0
 bind = SHIFT, l, resizeactive, 10 0
 
 bind = , equal, splitratio, 0.5
@@ -291,6 +294,9 @@ submap = reset
 
 # Open application launcher
 bind = SUPER, space, exec, rofi -show drun
+#
+# Open program launcher
+bind = SUPER + SHIFT, space, exec, rofi -show run
 
 # Open terminal
 bind = SUPER, return, exec, $term
@@ -325,6 +331,9 @@ bind = , T, exec, hyprctl dispatch submap reset && $term taskwarrior-tui
 # Launch mail
 bind = SHIFT, M, exec, hyprctl dispatch submap reset && $term fish -c neomutt
 
+# Launch calculator
+bind = SHIFT, C, exec, hyprctl dispatch submap reset && rofi -show calc
+
 # Go to utilities submap
 bind = , U, submap, utils
 
@@ -341,6 +350,9 @@ bind = , V, exec, hyprctl dispatch submap reset && pavucontrol
 
 # Open Bluetooth manager
 bind = , B, exec, hyprctl dispatch submap reset && blueman-manager
+
+# Open wifi picker
+bind = , W, exec, hyprctl dispatch submap reset && $localBin/wifimenu
 
 submap = reset
 
@@ -384,7 +396,7 @@ bind = SHIFT, XF86MonBrightnessDown, exec, $scriptsDir/brightness --dec 1
 ### Miscellaneous ###
 
 # Lock computer
-bind = SUPER, L, exec, $scriptsDir/lockscreen
+bind = SUPER + SHIFT, L, exec, $scriptsDir/lockscreen
 
 # Take screenshot
 bind = SUPER + ALT, 3, exec, $scriptsDir/screenshot --now
