fix: make UI have better use of space

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -128,7 +128,7 @@ binds {
 general {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 3
-    gaps_out = 7
+    gaps_out = 5
     border_size = 2
 
 #one color
@@ -221,6 +221,9 @@ windowrulev2 = float, class:^(clock)$, title:^(clock)$
 windowrulev2 = size 33% 27%, class:^(clock)$, title:^(clock)$
 windowrulev2 = center, class:^(clock)$, title:^(clock)$
 
+# Zoom and its BS
+windowrulev2 = float, class:^(zoom)$
+
 ###### MOUSE BINDS ######
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
@@ -266,6 +269,11 @@ bind = SUPER, l, movefocus, r
 bind = SUPER + SHIFT, j, swapnext
 bind = SUPER + SHIFT, k, swapnext, prev
 
+# Switching split types and normalizing
+bind = SUPER, R, togglesplit
+bind = SUPER, equal, splitratio, exact 1
+
+
 # Resizing windows
 
 bind = SUPER + SHIFT, R, exec, hyprctl dispatch submap resize && notify-send -u low "Window resize mode"
@@ -286,7 +294,7 @@ bind = SHIFT, k, resizeactive, 0 10
 bind = , l, resizeactive, 30 0
 bind = SHIFT, l, resizeactive, 10 0
 
-bind = , equal, splitratio, 0.5
+bind = , equal, splitratio, exact 1
 
 submap = reset
 
