refactor: move nnn config to single shell file
Decouples nnn from fish so Hyprland can use nnn without
creating another fish instance

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -310,7 +310,7 @@ bind = SUPER + SHIFT, space, exec, rofi -show run
 bind = SUPER, return, exec, $term
 
 # Open file browser - nnn
-bind = SUPER + SHIFT, return, exec, $term /usr/bin/fish -C "n -P p"
+bind = SUPER + SHIFT, return, exec, $term ~/.local/bin/nnn.sh -deaHQ -Pp
     
 # Close application window
 bind = SUPER, Q, killactive, window
