feat: use neomutt on macos

--- a/macos/skhd/.skhdrc
+++ b/macos/skhd/.skhdrc
@@ -166,7 +166,7 @@ apps < n : open ~ && skhd -k "escape"
 apps < f : open /Applications/Firefox.app && skhd -k "escape"
 apps < k : open /Applications/kitty.app && skhd -k "escape"
 apps < m : open /System/Applications/Messages.app && skhd -k "escape"
-apps < shift - m : open /System/Applications/Mail.app && skhd -k "escape"
+apps < shift - m : kitty -1 --listen-on=unix:"$TMPDIR/kitty" neomutt && skhd -k "escape"
 apps < s : open /Applications/Spotify.app && skhd -k "escape"
 apps < shift - s : open /Applications/Slack.app && skhd -k "escape"
 apps < shift - o : open /Applications/Obsidian.app && skhd -k "escape"
