--- a/common/kitty/.config/kitty/kitty.conf
+++ b/common/kitty/.config/kitty/kitty.conf
@@ -1,51 +1,51 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Font stuff {{{
-font_family Fira Code
-bold_font auto
-italic_font auto
-bold_italic_font auto
-font_size 11.0
+font_family Hasklig Medium
+bold_font Hasklig Bold
+italic_font Hasklig Medium Italic
+bold_italic_font Hasklig Bold Italic
+font_size 13.0
 
 # Fix the symbol map for kitty
 # "Nerd Fonts - Pomicons"
-symbol_map  U+E000-U+E00D Symbols Nerd Font
+symbol_map  U+E000-U+E00D Symbols Nerd Font Mono
 
 # "Nerd Fonts - Powerline"
-symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Symbols Nerd Font
+symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Symbols Nerd Font Mono
 
 # "Nerd Fonts - Powerline Extra"
-symbol_map U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4 Symbols Nerd Font
+symbol_map U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4 Symbols Nerd Font Mono
 
 # "Nerd Fonts - Symbols original"
-symbol_map U+e5fa-U+e62b Symbols Nerd Font
+symbol_map U+e5fa-U+e62b Symbols Nerd Font Mono
 
 # "Nerd Fonts - Devicons"
-symbol_map U+e700-U+e7c5 Symbols Nerd Font
+symbol_map U+e700-U+e7c5 Symbols Nerd Font Mono
 
 # "Nerd Fonts - Font awesome"
-symbol_map U+f000-U+f2e0 Symbols Nerd Font
+symbol_map U+f000-U+f2e0 Symbols Nerd Font Mono
 
 # "Nerd Fonts - Font awesome extension"
-symbol_map U+e200-U+e2a9 Symbols Nerd Font
+symbol_map U+e200-U+e2a9 Symbols Nerd Font Mono
 
 # "Nerd Fonts - Octicons"
-symbol_map U+f400-U+f4a8,U+2665-U+2665,U+26A1-U+26A1,U+f27c-U+f27c Symbols Nerd Font
+symbol_map U+f400-U+f4a8,U+2665-U+2665,U+26A1-U+26A1,U+f27c-U+f27c Symbols Nerd Font Mono
 
 # "Nerd Fonts - Font Linux"
-symbol_map U+F300-U+F313 Symbols Nerd Font
+symbol_map U+F300-U+F313 Symbols Nerd Font Mono
 
 #  Nerd Fonts - Font Power Symbols"
-symbol_map U+23fb-U+23fe,U+2b58-U+2b58 Symbols Nerd Font
+symbol_map U+23fb-U+23fe,U+2b58-U+2b58 Symbols Nerd Font Mono
 
 #  "Nerd Fonts - Material Design Icons"
-symbol_map U+f500-U+fd46 Symbols Nerd Font
+symbol_map U+f500-U+fd46 Symbols Nerd Font Mono
 
 # "Nerd Fonts - Weather Icons"
-symbol_map U+e300-U+e3eb Symbols Nerd Font
+symbol_map U+e300-U+e3eb Symbols Nerd Font Mono
 
 # Misc Code Point Fixes
-symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbols Nerd Font
+symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbols Nerd Font Mono
 
 #:  Show underlying characters in ligatures when working with them
 disable_ligatures cursor
