chore: be explicit about launch mode
Also adds BlueBubbles launcher

--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -320,12 +320,12 @@ bind = SUPER + SHIFT, Q, exec, eww -c ~/.config/eww/bar open dialog-logout
 
 ## Application launching submaps ##
 
-bind = SUPER, O, submap, apps
+bind = SUPER, O, exec, hyprctl dispatch submap apps && notify-send -u low "Launch mode"
 
 submap = apps
 
 # Escape from launching context
-bind = , escape, submap, reset
+bind = , escape, exec, hyprctl dispatch submap reset && notify-send -u low "Normal mode"
 
 # Launch Firefox
 bind = , F, exec, hyprctl dispatch submap reset && firefox
@@ -335,6 +335,9 @@ bind = , S, exec, hyprctl dispatch submap reset && $term ncspot
 
 # Launch Taskwarrior
 bind = , T, exec, hyprctl dispatch submap reset && $term taskwarrior-tui
+
+# Launch Bluebubbles
+bind = , M, exec, hyprctl dispatch submap reset && flatpak run app.bluebubbles.BlueBubbles
 
 # Launch mail
 bind = SHIFT, M, exec, hyprctl dispatch submap reset && $term fish -c neomutt
