--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ $localBin = $HOME/.local/bin
 $scriptsDir = $HOME/.config/hypr/scripts
 $hyprDir = $HOME/.config/hypr
 
-$term = kitty -1 --listen-on unix:/tmp/kitty
+$term = wezterm
 $menu = $scriptsDir/menu
 $fullmenu = $scriptsDir/fullmenu
 $powermenu = $scriptsDir/powermenu
@@ -310,7 +310,7 @@ bind = SUPER + SHIFT, space, exec, rofi -show run
 bind = SUPER, return, exec, $term
 
 # Open file browser - nnn
-bind = SUPER + SHIFT, return, exec, $term ~/.local/bin/nnn.sh -deaHQ -Pp
+bind = SUPER + SHIFT, return, exec, $term -e ~/.local/bin/nnn.sh -deaHQ -Pp
     
 # Close application window
 bind = SUPER, Q, killactive, window
@@ -331,16 +331,16 @@ bind = , escape, exec, hyprctl dispatch submap reset && notify-send -u low "Norm
 bind = , F, exec, hyprctl dispatch submap reset && firefox
 
 # Launch Spotify
-bind = , S, exec, hyprctl dispatch submap reset && $term ncspot
+bind = , S, exec, hyprctl dispatch submap reset && $term -e ncspot
 
 # Launch Taskwarrior
-bind = , T, exec, hyprctl dispatch submap reset && $term taskwarrior-tui
+bind = , T, exec, hyprctl dispatch submap reset && $term -e taskwarrior-tui"
 
 # Launch Bluebubbles
 bind = , M, exec, hyprctl dispatch submap reset && flatpak run app.bluebubbles.BlueBubbles
 
 # Launch mail
-bind = SHIFT, M, exec, hyprctl dispatch submap reset && $term fish -c neomutt
+bind = SHIFT, M, exec, hyprctl dispatch submap reset && $term -e neomutt
 
 # Launch calculator
 bind = SHIFT, C, exec, hyprctl dispatch submap reset && rofi -show calc
