--- a/common/tmux/.tmux.conf
+++ b/common/tmux/.tmux.conf
@@ -17,6 +17,9 @@ color_gray="#5c6370"
 color_buffer="#939aa3"
 color_selection="#3e4452"
 
+# Allow larger colorspace
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 # ====== PLUGINS ======
 set -g @plugin tpm
 set -g @plugin tmux-pomodoro-plus
@@ -55,9 +58,6 @@ set -g status-left "#[fg=$color_purple,italics] #S "
 set -g status-right "#[fg=$color_gray]%R#{pomodoro_status}" 
 setw -g window-status-format "#[fg=$color_gray,italics]#I: #[noitalics]#W"
 setw -g window-status-current-format "#[fg=$color_gray,italics]#I: #[fg=$color_buffer,noitalics,bold]#W"
-
-# ====== TPM INIT ======
-run '~/.tmux/plugins/tpm/tpm'
 
 # ====== KEYBINDS ======
 bind-key C-r run-shell "tmux source-file ~/.tmux.conf && tmux display-message 'reloaded tmux config'"
