--- a/macos/yabai/.yabairc
+++ b/macos/yabai/.yabairc
@@ -40,5 +40,6 @@ yabai -m rule --add app="^System Preferences$" manage=off
 yabai -m rule --add app="^zoom.us$" manage=off
 yabai -m rule --add app="^Wally$" manage=off
 yabai -m rule --add app="^Alfred Preferences$" manage=off
+yabai -m rule --add app="^LibreOffice$" title="^Delete Contents$" manage=off
 
 echo "yabai configuration loaded.."
