feat(tmux): use 1-based indexing for windows/panes

--- a/common/tmux/.tmux.conf
+++ b/common/tmux/.tmux.conf
@@ -40,6 +40,12 @@ set -g mode-keys vi
 
 set -g status-interval 5
 
+# Use 1-based indexing for left hand convenience
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
 ## --- Status bar ---
 set -g status on
 set -g status-justify centre
