feat(todoist): add todoist fish bindings

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "newsboat-common"]
 	path = common/newsboat
 	url = git@github.com:psanker/newsboat.git
+[submodule "common/todoist"]
+	path = common/todoist
+	url = ./common/todoist
